# module-wrapper

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
module_wrapper/: __init__.py  __init__.pyi
tests/: test_module_wrapper.py
