[tool.poetry]
name = "module-wrapper"
version = "0.1.22"
description = "Module wrapper Python library"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["module", "wrapper", "proxy", "decorator"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/rominf/module-wrapper"

[tool.poetry.dependencies]
python = "^3.5"
wrapt = {git = "https://github.com/rominf/wrapt/"}

[tool.poetry.dev-dependencies]
