[tool.poetry]
name = "module-wrapper"
version = "0.3.2"
description = "Module wrapper Python library"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["module", "wrapper", "proxy", "decorator"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 7 - Inactive"
]
repository = "https://github.com/rominf/module-wrapper"

[tool.poetry.dependencies]
python = "^3.6,<3.10"
stdlib_list = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
